[package]
name = "bit-set"
version = "0.5.3"
authors = ["Alexis Beingessner <a.beingessner@gmail.com>"]
license = "MIT/Apache-2.0"
description = "A set of bits"
repository = "https://github.com/contain-rs/bit-set"
homepage = "https://github.com/contain-rs/bit-set"
documentation = "https://contain-rs.github.io/bit-set/bit_set"
keywords = ["data-structures", "bitset"]
readme = "README.md"

[dev-dependencies]
rand = "0.3"

[dependencies]
serde2 = { package = "serde", version = "1", default-features = true, optional = true }

[dependencies.bit-vec]
version = "0.6.1"
default-features = false

[features]
default = ["std"]
std = ["bit-vec/std"]
serde = ["serde2", "bit-vec/serde"]
