[package]
name = "bit-set"
version = "0.6.0"
authors = ["Alexis Beingessner <a.beingessner@gmail.com>"]
license = "MIT/Apache-2.0"
description = "A set of bits"
repository = "https://github.com/contain-rs/bit-set"
homepage = "https://github.com/contain-rs/bit-set"
documentation = "https://docs.rs/bit-set/"
keywords = ["data-structures", "bitset"]
readme = "README.md"

[dev-dependencies]
rand = "0.8"

[dependencies.bit-vec]
version = "0.7.0"
default-features = false

[features]
default = ["std"]
std = ["bit-vec/std"]
bench = []
